Fixed spacing between each section

--- a/source/assets/stylesheets/components/_video.scss
+++ b/source/assets/stylesheets/components/_video.scss
@@ -20,6 +20,7 @@
     margin-bottom: 40px;
     p{
       font-size: 16px;
+      margin-top: -100px;
     }
   }
 }
@@ -28,6 +29,9 @@
     margin-top:60px;
     video{
       width: 280px;
+    }
+    p{
+      margin-top: 0px;
     }
   }
 }
