--- a/source/assets/stylesheets/pages/_eventreports.scss
+++ b/source/assets/stylesheets/pages/_eventreports.scss
@@ -38,7 +38,7 @@
   margin-left: 120px;
   background-position: right;
   margin-bottom: 100px;
-  margin-top: 100px;
+  margin-top: 180px;
 }
 
 @media (max-width: 1024px){
@@ -70,10 +70,7 @@
   .report-fullscreen{
     background-position: right;
     height: 40vh;
-    margin-bottom: 80px;
-    margin-right: 80px;
-    margin-left: 80px;
-    margin-top: 60px;
+    margin: 90px 80px 90px 80px;
   }
   // .event-fullscreen{
   //   background-position: right;
