--- a/source/assets/stylesheets/pages/_menu.scss
+++ b/source/assets/stylesheets/pages/_menu.scss
@@ -17,10 +17,12 @@
       width: 70% !important;
     }
   }
+  #menu h2{
+    margin-top: -50px;
+  }
 }
 
 @media (max-width: 960px){
-
 }
 
 @media (max-width: 768px){
@@ -30,6 +32,12 @@
       width: 60% !important;
     }
   }
+  #menu h2{
+    margin-top: -10px;
+  }
+  #mentors h2{
+    margin-top: 140px;
+  }
 }
 
 @media (max-width: 540px){
@@ -38,5 +46,11 @@
     img{
       width: 60% !important;
     }
+  }
+  #menu h2{
+    margin-top: 20px;
+  }
+  #mentors h2{
+    margin-top: 100px;
   }
 }
