--- a/source/assets/stylesheets/pages/_uservoice.scss
+++ b/source/assets/stylesheets/pages/_uservoice.scss
@@ -6,7 +6,8 @@
   background-size: cover;
   margin-right: 120px;
   margin-left: 120px;
-  margin-bottom:160px;
+  margin-bottom:200px;
+  margin-top: 200px;
 }
 
 .comingsoon-text h3 {
@@ -91,7 +92,7 @@
     height: 50vh;
     margin-right: 50px;
     margin-left: 50px;
-    margin-top: 80px;
+    margin-top: -18px;
   }
   .comingsoon-text h3{
     font-size: 32px;
